--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,10 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%; /* White */
+    --background: 0 0% 98%; /* Lighter Gray */
     --foreground: 0 0% 3.9%; /* Black */
 
-    --card: 0 0% 97%;
+    --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
 
     --popover: 0 0% 100%;
@@ -29,7 +29,7 @@
     --destructive-foreground: 0 0% 98%;
 
     --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
+    --input: 0 0% 92.3%;
     --ring: 16 100% 60%;
 
     --radius: 0.75rem;
